--- a/passion/less/tiles.less
+++ b/passion/less/tiles.less
@@ -1244,8 +1244,11 @@
 
 }
 @media only screen and (max-width : 1200px) {
-  #passion .module-hero-image .circle-button-container {
-     width: 100%;
+  #passion .module-hero-image {
+    padding-bottom: 32px;
+    .circle-button-container {
+      width: 100%;
+    }
   }
 }
 
@@ -1299,6 +1302,7 @@
   }
 
   #passion .module-hero-image {
+    padding-bottom: 152px;
     .row {
       padding-left: 0;
       h1 {
@@ -1443,7 +1447,9 @@
     }
   }
 
-  #passion .module-hero-image .row{
+  #passion .module-hero-image {
+  margin-bottom: 242px;
+  .row{
     .circle-button-container {
       margin-top: 5px;
       .fyp-filter-triggers {
@@ -1488,6 +1494,7 @@
       width: auto;
     }
   }
+}
 }
 
 // This is just for the buttons so they stack normally on mobile
